--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,27 +6,31 @@ site_description: "Documentation for OmioCNC X6-2200EPL CNC Router"
 # Configuration
 theme:
   name: material
+  palette:
+    primary: orange
   features:
     - navigation.tabs
-    - header.autohide
+    - navigation.sections
+    - navigation.expand
+    - navigation.indexes
+    - navigation.top
 
 # Page Tree
 nav:
   - Home: index.md
   - Checklists:
       - checklists/sample.md
-      - checklists/sample2.md
   - Hardware:
       - Overview: hardware/overview.md
+      - Spindle: hardware/spindle.md
       - Cooling: hardware/cooling.md
-      - License: license.md
   - Firmware:
       - Overview: firmware/overview.md
-      - License: license.md
   - Design:
       - design/design.md
   - Authors: authors.md
   - Change Log: changelog.md
+  - License: license.md
   - References: references.md
 
 # Repository
@@ -78,7 +82,9 @@ copyright: Copyright &copy; 2021 Stephen Eaton
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/madeinoz67/omiocnc-x6-2200epl
+      link: https://github.com/madeinoz67
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/madeinoz
 # Google Analytics
 #google_analytics:
 #  - !!python/object/apply:os.getenv ["GOOGLE_ANALYTICS_KEY"]
