--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,8 @@ markdown_extensions:
   - pymdownx.mark
   - pymdownx.tabbed
   - pymdownx.tilde
+  - toc:
+      permalink: true
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
