added mkdocs revision date plugin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ mkdocs-mermaid2-plugin = "^0.5.1"
 mkdocs-macros-plugin = "^0.5.5"
 mkdocs-ezlinks-plugin = "^0.1.12"
 pymdown-extensions = "^9.0"
+mkdocs-material-extensions = "^1.0.3"
+mkdocs-git-revision-date-localized-plugin = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 
