--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,9 @@ edit_uri: ""
 plugins:
   - search
   - ezlinks
+  - git-revision-date-localized:
+      enable_creation_date: true
+      type: iso_date
   - mermaid2
 
 extra_javascript:
