--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,10 +64,7 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: true
       type: iso_date
-  - mermaid2
-
-extra_javascript:
-  - https://unpkg.com/mermaid@8.6.4/dist/mermaid.min.js
+  - drawio-exporter
 
 # extensions
 markdown_extensions:
@@ -85,11 +82,6 @@ markdown_extensions:
   - pymdownx.tilde
   - toc:
       permalink: true
-  - pymdownx.superfences:
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:mermaid2.fence_mermaid
   - pymdownx.keys
   - pymdownx.tasklist:
       clickable_checkbox: true
