--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pymdown-extensions = "^9.0"
 mkdocs-material-extensions = "^1.0.3"
 mkdocs-git-revision-date-localized-plugin = "^0.10.0"
 mkdocs-drawio-exporter = "^0.8.0"
+mkdocs-thumbnails = "^0.0.9"
 
 [tool.poetry.dev-dependencies]
 
